Add stules to hbs files to polish app well

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -7,7 +7,7 @@
         <br>
         <h2><strong>Welcome to Wild Life Tracker!!.</strong> </h2>
         <br><br>
-        <h3><u><strong>Help Them to find a Home </strong></u></h3>
+        <h3 style="font-size:20;color:darkblue"><u><strong>Help Them to find a Home </strong></u></h3>
     <br><br>
         <div class="row" id="bSite">
             <div class="col-md-6">
